--- a/src/view/footer.ejs
+++ b/src/view/footer.ejs
@@ -34,7 +34,7 @@
 
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        Quach Thanh Nghi
+        Pham Thanh Phu 2001043
     </div>
     <!-- Copyright -->
 </footer>
